--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "feat"
 version = "0.1.0"
+description = "local-first cli task tracking"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
+error-report = "0.0.1"
+rusqlite = "0.31.0"
+rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
