--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+dirs = "5.0.1"
 error-report = "0.0.1"
 rusqlite = "0.31.0"
 rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
