--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ description = "local-first cli task tracking"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.82"
+anyhow-std = "0.1.4"
 clap = { version = "4.5.4", features = ["derive"] }
 dirs = "5.0.1"
 error-report = "0.0.1"
-rusqlite = "0.31.0"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
