--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
-[package]
-name = "feat"
+[workspace]
+resolver = "2"
+members = [
+  "legacy",
+]
+
+[workspace.package]
 version = "0.1.0"
-description = "local-first cli task tracking"
 edition = "2021"
 
-[dependencies]
+[workspace.dependencies]
 anyhow = "1.0.82"
 anyhow-std = "0.1.4"
 clap = { version = "4.5.4", features = ["derive"] }
@@ -15,9 +19,7 @@ include_dir = "0.7.3"
 indoc = "2.0.5"
 log = "0.4.21"
 name-variant = "0.1.0"
-rusqlite = { version = "0.31.0", features = ["bundled"] }
 rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
-
-[dev-dependencies]
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 tempfile = "3.10.1"
 test-case = "3.3.1"
